.provarCaches/00D5f000005vwGkEAI/objects/rstk__pjwkb__c.object
<CustomObject>
    <fields>
        <fullName>rstk__pjwkb_var_subtot_mtl__c</fullName>
        <formula>rstk__pjwkb_costs_subtot_mtl__c - rstk__pjwkb_budget_subtot_mtl__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Material Cost Variance for this Project</inlineHelpText>
        <label>Variance Material</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_var_subtot_odc__c</fullName>
        <formula>rstk__pjwkb_costs_subtot_odc__c - rstk__pjwkb_budget_subtot_odc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Other Direct Charge  Cost Variance for this Project</inlineHelpText>
        <label>Variance ODC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_var_subtot_ohd__c</fullName>
        <formula>rstk__pjwkb_costs_subtot_ohd__c - rstk__pjwkb_budget_subtot_ohd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Overhead Cost Variance for this Project</inlineHelpText>
        <label>Variance Overhead</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_var_subtot_sub__c</fullName>
        <formula>rstk__pjwkb_costs_subtot_sub__c - rstk__pjwkb_budget_subtot_sub__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Subcontract Cost Variance for this Project</inlineHelpText>
        <label>Variance Subcontract</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_var_tot__c</fullName>
        <formula>rstk__pjwkb_costs_tot__c - rstk__pjwkb_budget_tot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Total Variance, Actual minus Budget, for this Project</inlineHelpText>
        <label>Total Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Project Workbench</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Project_Workbench</fullName>
        <columns>NAME</columns>
        <columns>rstk__pjwkb_div__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__pjwkb_proj_master__c</columns>
        <columns>rstk__pjwkb_proj__c</columns>
        <columns>rstk__pjwkb_costs_tot__c</columns>
        <columns>rstk__pjwkb_budget_tot__c</columns>
        <columns>rstk__pjwkb_var_tot__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Project Workbench</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Workbench</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>